--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,10 @@ authors = ["Светлана Логвинова"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "3.2.11"
+Pillow = "^9.0.0"
+djangorestframework = "^3.13.1"
+django-filter = "^21.1"
+reportlab = "^3.6.8"
 
 [tool.poetry.dev-dependencies]
 
