--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,8 +11,10 @@ Pillow = "^9.0.0"
 djangorestframework = "^3.13.1"
 django-filter = "^21.1"
 reportlab = "^3.6.8"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
+django-debug-toolbar = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
