--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,58 @@
 version: '3.3'
 services:
 
+  # db:
+  #   image: postgres:13.0-alpine
+  #   volumes:
+  #     - /var/lib/postgresql/data/
+  #   env_file:
+  #     - ./.env
+
+  backend:
+    build: ../backend
+    restart: always
+    ports:
+      - "8000:8000" 
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+  
+  # backend:
+  #   image: sunnyangel/foodgram_back:latest
+  #   restart: always
+  #   ports:
+  #     - "8080:8080" 
+  #   volumes:
+  #     - static_value:/code/static/
+  #     - media_value:/code/media/
+  #   depends_on:
+  #     - db
+  #   env_file:
+  #     - .env
+
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
