--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,34 +1,34 @@
 version: '3.3'
 services:
 
-  # db:
-  #   image: postgres:13.0-alpine
-  #   volumes:
-  #     - /var/lib/postgresql/data/
-  #   env_file:
-  #     - ./.env
-
-  backend:
-    build: ../backend
-    restart: always
-    ports:
-      - "8000:8000" 
+  db:
+    image: postgres:13.0-alpine
     volumes:
-      - static_value:/code/static/
-      - media_value:/code/media/
-  
-  # backend:
-  #   image: sunnyangel/foodgram_back:latest
+      - /var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  # backend: (for local using)
+  #   build: ../backend
   #   restart: always
   #   ports:
-  #     - "8080:8080" 
+  #     - "8000:8000" 
   #   volumes:
   #     - static_value:/code/static/
   #     - media_value:/code/media/
-  #   depends_on:
-  #     - db
   #   env_file:
   #     - .env
+  
+  backend:
+    image: sunnyangel/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+    depends_on:
+      - db
+    env_file:
+      - .env
 
   frontend:
     build:
@@ -43,8 +43,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/static/
+      - media_value:/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       
