--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,44 +1,37 @@
 server {
+    server_tokens off;
     listen 80;
-    server_name 127.0.0.1 localhost;
-    location /static/admin/ {
-      root /var/html/;
-    }
+    server_name localhost;
+
     location /media/ {
-      root /var/html/;
+        alias /media/;
     }
-     location /backend_static/ {
-        proxy_pass http://host.docker.internal:8000/backend_static/;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-     }
-     location /backend_media/ {
-        proxy_pass http://host.docker.internal:8000/backend_media/;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-     }
-    location /api/ {
-        proxy_pass http://host.docker.internal:8000/api/;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
+
+    location /static/admin/ {
+        alias /static/admin/;
     }
+
+    location /static/rest_framework/ {
+        alias /static/rest_framework/;
+    }
+
     location /admin/ {
-        proxy_pass http://host.docker.internal:8000/admin/;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000/admin/;
     }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -47,9 +40,9 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root /var/html/frontend/;
+    }
 }
