--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,15 @@ WORKDIR /code
 
 RUN pip install "poetry==1.1"
 
-COPY . .
+COPY poetry.lock .
+COPY pyproject.toml .
 
 RUN poetry config virtualenvs.create false
 RUN poetry install
 
-WORKDIR /code/foodgram
+COPY /foodgram /code/
+COPY .env /code/
+
+WORKDIR /code
 
 CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
