--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   #     - .env
   
   backend:
-    image: sunnyangel/foodgram:v4
+    image: sunnyangel/foodgram:latest
     restart: always
     volumes:
       - static_value:/code/static/
